# ocfm

./: .travis.yml  CMakeLists.txt  INSTALL  README.md  elokab-files-manager.pro
common/: CMakeLists.txt
common/about/: widgetabout.cpp  widgetabout.ui
common/filesutils/: dialogxdesktop.cpp  openwithdlg.cpp  propertiesdlg.cpp
elokab-fa/: CMakeLists.txt  elokab-fa.pro
elokab-fm/: CMakeLists.txt  actions.cpp  actions.h  defines.h  elokab-fm.pro  fileinformation.cpp  fileinformation.h  fileinformation.ui  itemdelegate.cpp  itemdelegate.h  mainwindow.cpp  mainwindow.h  myfilesystemmodel.cpp  myfilesystemmodel.h  owncloudcfg.cpp  owncloudcfg.h  owncloudsocket.cpp  owncloudsocket.h  pagewidget.cpp  pathwidget.cpp  searchview.cpp  tab.cpp  tab.h  thumbnails.cpp  thumbnails.h
src/: CMakeLists.txt  actions.cpp  actions.h  defines.h  dialogrenamefiles.cpp  fileinformation.cpp  fileinformation.ui  icons.qrc  itemdelegate.cpp  itemdelegate.h  mainwindow.cpp  mylistview.h  owncloudcfg.cpp  owncloudcfg.h  owncloudsocket.cpp  owncloudsocket.h  pagewidget.cpp  pagewidget.h  searchview.cpp  settingsdlg.cpp  tab.cpp  tab.h  thumbnails.cpp  thumbnails.h
usr/share/applications/: ocfm.desktop
